--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,11 @@
   --dark-background-color: #2f303a;
 }
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
   color: var(--primery-text-color);
-  background-color: var(--primery-white-color);
   letter-spacing: 0.03em;
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 .list {
@@ -19,62 +20,43 @@ body {
 
 .link {
   text-decoration: none;
+  color: inherit;
 }
 /* ----------Header---------- */
-.header {
-  background-color: var(--primery-white-color);
-}
+
 /* --logo-- */
-.header-logo {
-  color: var(--titul-text-color);
-  font-family: "Raleway", sans-serif;
+
+.logo {
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-}
-.accent {
   color: var(--accent-color);
 }
-.header-link {
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+.header-logo {
   color: var(--titul-text-color);
 }
-.header-link.current {
-  font-family: inherit;
+.header-list {
+  color: var(--titul-text-color);
+}
+.header-link {
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(--accent-color);
 }
+
 .header-link:hover,
 .header-link:focus,
-.header-mail:hover,
-.header-mail:focus,
-.header-tel:hover,
-.header-tel:focus {
+.current {
   color: var(--accent-color);
 }
-.header-mail,
-.header-tel {
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #757575;
-}
+
 /* ---------------main---------- */
 /* ------------hero----------- */
 .hero {
   background-color: var(--titul-text-color);
 }
 .hero-title {
-  font-family: "Roboto", sans-serif;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -85,25 +67,38 @@ body {
 }
 
 .hero-btn {
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
   color: var(--primery-white-color);
   background-color: var(--accent-color);
 }
 /* ---------section----------- */
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
 .feature-list .title {
-  font-family: inherit;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--titul-text-color);
 }
-.title-text {
-  font-size: 14px;
-  line-height: 1.71;
-}
-.about-title,
-.team-title {
-  font-family: inherit;
+.section-title {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
@@ -114,14 +109,11 @@ body {
 }
 
 .team-name {
-  font-family: inherit;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
   color: var(--titul-text-color);
 }
-.team-profession {
+.team-profession,
+.team-name {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
@@ -130,32 +122,25 @@ body {
 .footer {
   background-color: var(--dark-background-color);
 }
-.footer-link {
+.footer-logo {
   color: var(--primery-white-color);
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
 }
 .footer-address-link {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer-address-link[target="_blank"] {
   color: var(--primery-white-color);
 }
 .footer-address {
-  font-family: inherit;
-  font-size: 14px;
-  line-height: 1.71;
+  font-style: inherit;
   color: rgba(255, 255, 255, 0.6);
 }
-.footer-address:hover,
-.footer-address:focus {
+.footer-address-link:hover,
+.footer-address-link:focus {
   color: var(--primery-white-color);
 }
 /* -----Portfolio---------- */
-.btn.current {
+.filter-btn.current {
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -164,7 +149,7 @@ body {
   color: var(--primery-white-color);
   background-color: var(--accent-color);
 }
-.btn {
+.filter-btn {
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -173,19 +158,19 @@ body {
   color: var(--titul-text-color);
   background-color: #f5f4fa;
 }
-.btn:hover,
-.btn:focus {
+.filter-btn:hover,
+.filter-btn:focus {
   color: var(--primery-white-color);
   background-color: var(--accent-color);
 }
-.img {
+.portfolio-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--titul-text-color);
 }
-.img-text {
+.portfolio-text {
   font-size: 16px;
   line-height: 1.87;
   color: var(--primery-text-color);
